--- a/src/less/components/_components.less
+++ b/src/less/components/_components.less
@@ -1,5 +1,5 @@
 .projectBrief {
-    flex-wrap: initial;
+    // flex-wrap: initial;
 
     .border-line-between {
         height: 180px;
